--- a/about.html
+++ b/about.html
@@ -149,32 +149,64 @@
     </section>
 
 
-    <!-- ================= FOOTER ================= -->
     <section id="footer">
         <div class="footer container">
             <div class="brand">
                 <h1><span>X</span>enia <span>B</span>otea</h1>
             </div>
 
+
+            <div class="footer-welcome">
+                <h3 class="footer-title">WELCOME!</h3>
+
+                <p class="footer-text">
+                    Hi! Welcome to my world! I’m artist Xenia Botea.
+                </p>
+
+                <p class="footer-text">
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
+                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                </p>
+
+                <p class="footer-text">
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
+                    love to hear from you!
+                </p>
+            </div>
+
             <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank">
+                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
                 </a>
-                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
                 </a>
-                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank">
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" />
+                </a>
+                <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
+                </a>
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
+                    rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
             </div>
 
             <p class="copyright">© 2026 | All rights reserved InspirA+</p>
+            <div class="legal">
+                <a href="termeni.html">Terms &amp; Conditions</a>
+                <span>|</span>
+                <a href="privacy.html">Privacy Policy</a>
+            </div>
         </div>
     </section>
 
-    <!-- JS -->
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 
+    <a href="https://wa.me/40758312756" target="_blank" rel="noopener" class="whatsapp-float">
+        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
+    </a>
 </body>
 
 </html>
