--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,6 @@
         </div>
     </section>
     <!-- End Projects Section -->
-
     <!-- Footer -->
     <section id="footer">
         <div class="footer container">
@@ -68,61 +67,60 @@
                 <h1><span>X</span>enia <span>B</span>otea</h1>
             </div>
 
-            <!-- Contact -->
-            <!-- Social icons -->
-            <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
-                </a>
-                <a href="https://www.instagram.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
-                </a>
-                <a href="https://www.tiktok.com/@inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
-                </a>
-                <a href="https://wa.me/40758312756" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
-                </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati"
-                    class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps">
-                </a>
 
+            <div class="footer-welcome">
+                <h3 class="footer-title">WELCOME!</h3>
 
+                <p class="footer-text">
+                    Hi! Welcome to my world! I’m artist Xenia Botea.
+                </p>
+
+                <p class="footer-text">
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
+                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                </p>
+
+                <p class="footer-text">
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
+                    love to hear from you!
+                </p>
             </div>
+
+            <div class="social-icons">
+                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
+                </a>
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
+                </a>
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" />
+                </a>
+                <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
+                </a>
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
+                    rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
+                </a>
+            </div>
+
             <p class="copyright">© 2026 | All rights reserved InspirA+</p>
-            <div style="text-align: center; margin-top: 15px;">
-                <a href="termeni.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Terms
-                    & Conditions</a>
-                <span style="color: #444;">|</span>
-                <a href="privacy.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Privacy
-                    Policy</a>
+            <div class="legal">
+                <a href="termeni.html">Terms &amp; Conditions</a>
+                <span>|</span>
+                <a href="privacy.html">Privacy Policy</a>
             </div>
         </div>
     </section>
-    <!-- End Footer -->
-    <script>
-        // Blochează click dreapta pe imagini
-        document.addEventListener('contextmenu', function (e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        }, false);
 
-        // Blochează drag and drop (să nu poată trage imaginea pe desktop)
-        document.addEventListener('dragstart', function (e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        }, false);
-    </script>
     <script src="./app.js"></script>
-    <!-- Buton WhatsApp fix dreapta jos -->
-    <a href="https://wa.me/40758312756" target="_blank" class="whatsapp-float">
-        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+
+    <a href="https://wa.me/40758312756" target="_blank" rel="noopener" class="whatsapp-float">
+        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
     </a>
+
+
 </body>
 
 </html>
