--- a/privacy.html
+++ b/privacy.html
@@ -9,9 +9,9 @@
     <style>
         body {
             background-color: #000;
-            color: white;
+            color: rgb(0, 0, 0);
             font-family: 'Montserrat', sans-serif;
-            padding: 40px 20px;
+            padding: 80px 50px;
         }
 
         .container-privacy {
@@ -24,79 +24,111 @@
         h2 {
             color: #eb00ff;
             text-transform: uppercase;
-            margin-top: 30px;
-            letter-spacing: 2px;
+            margin-top: 40px;
         }
 
         .back-link {
-            color: #fff;
-            text-decoration: none;
-            border: 1px solid #eb00ff;
-            padding: 8px 15px;
-            margin-bottom: 30px;
             display: inline-block;
-            transition: 0.3s;
+            padding: 12px 22px;
+            font-size: 16px;
+            font-weight: 500;
+            letter-spacing: 0.05em;
+            color: #111;
+            text-decoration: none;
+            background: rgba(231, 233, 219, 0.897);
+            border-radius: 999px;
+            border: 1px solid rgba(0, 0, 0, 0.08);
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .back-link::after {
+            content: "";
+            position: absolute;
+            left: 12%;
+            right: 12%;
+            bottom: 6px;
+            height: 10px;
+            border-radius: 999px;
+            background: linear-gradient(90deg, transparent, rgba(255, 72, 218, 0.6), transparent);
+            opacity: 0.35;
+            transform: rotate(-2deg);
+            transition: opacity 0.3s ease;
         }
 
         .back-link:hover {
-            background: #eb00ff;
+            color: #ff48da;
+            transform: translateY(-2px);
+        }
+
+        .back-link:hover::after {
+            opacity: 0.6;
         }
 
         p,
         li {
-            font-size: 1rem;
-            color: #ccc;
-            margin-bottom: 15px;
+            font-size: 2rem;
+            color: #000000e0;
         }
 
         strong {
-            color: #fff;
+            color: #000;
+            font-weight: 700;
         }
     </style>
 </head>
 
 <body>
     <div class="container-privacy">
-        <a href="index.html" class="back-link">← BACK TO HOME</a>
+        <a href="index.html" class="back-link">← Back to Home</a>
+
         <h1>Privacy Policy</h1>
 
-        <p>At <strong>InspirA+</strong>, we respect your privacy and are committed to protecting the personal data you
-            share with us. This policy outlines how we handle your information.</p>
+        <p>
+            At <strong>InspirA+</strong>, we respect your privacy and are committed to protecting the personal data you
+            share with us. This policy explains what we collect, why we collect it, and how we keep it safe.
+        </p>
 
         <h2>1. Information We Collect</h2>
         <p>We collect personal information that you voluntarily provide when you:</p>
         <ul>
             <li>Subscribe to our <strong>Newsletter</strong> (email address).</li>
             <li>Contact us via <strong>WhatsApp or Email</strong> (name, phone number, or social media handle).</li>
-            <li>Place an <strong>Order</strong> for artworks, prints, or workshops (name, shipping address, billing
-                details).
-            </li>
+            <li>Place an <strong>Order</strong> for artworks, prints, commissions, or workshops (name, shipping address,
+                billing details).</li>
         </ul>
 
         <h2>2. How We Use Your Data</h2>
         <p>Your data is used strictly for the following purposes:</p>
         <ul>
-            <li>Processing and delivering your art orders or commissions.</li>
+            <li>Processing and delivering your orders or commissions.</li>
             <li>Confirming registrations for art courses and workshops.</li>
             <li>Sending updates and promotional content via newsletter (only with your explicit consent).</li>
             <li>Responding to your inquiries and providing customer support.</li>
         </ul>
 
         <h2>3. Data Protection and Sharing</h2>
-        <p>We do <strong>not</strong> sell, trade, or rent your personal data to third parties. Your information is only
-            shared with essential service providers, such as courier companies for shipping physical artworks.</p>
+        <p>
+            We do <strong>not</strong> sell, trade, or rent your personal data to third parties. Your information may be
+            shared only with essential service providers (for example courier companies) strictly for delivery purposes.
+        </p>
 
         <h2>4. Your Rights (GDPR)</h2>
-        <p>You have the right to access, correct, or request the deletion of your personal data at any time. If you wish
-            to be removed from our database or unsubscribe from the newsletter, please contact us at
+        <p>
+            You have the right to access, correct, or request the deletion of your personal data at any time. You can
+            also unsubscribe from the newsletter whenever you want. For requests, please contact us at:
             <strong>inspiraplus@gmail.com</strong>.
         </p>
 
         <h2>5. Changes to This Policy</h2>
-        <p>We reserve the right to update this Privacy Policy to reflect changes in our practices or for legal reasons.
-            The latest version will always be available on this page.</p>
+        <p>
+            We reserve the right to update this Privacy Policy to reflect changes in our practices or for legal reasons.
+            The latest version will always be available on this page.
+        </p>
 
-        <p style="margin-top: 40px; font-size: 0.8rem; color: #666;">Last updated: February 2026</p>
+        <p style="margin-top: 40px; font-size: 1.4rem; color: #000000a6;">
+            Last updated: February 2026
+        </p>
     </div>
 </body>
 
