--- a/collection.html
+++ b/collection.html
@@ -21,6 +21,7 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
+                        <li><a href="index.html" class="is-active">Home</a></li>
                         <li><a href="about.html">About me</a></li>
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="courses.html">Courses</a></li>
@@ -83,13 +84,11 @@
                 </p>
 
                 <p class="footer-text">
-                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
-                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many different ways. I hope you’ll enjoy your time here, and thank you for collecting.
                 </p>
 
                 <p class="footer-text">
-                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
-                    love to hear from you!
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d love to hear from you!
                 </p>
             </div>
 
@@ -106,8 +105,7 @@
                 <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
-                    rel="noopener">
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
             </div>
