--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
         <div class="header container">
             <div class="nav-bar">
                 <div class="brand">
-                    <a href="index.html">
+                    <a href="index.html" aria-label="Home">
                         <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo" />
                     </a>
                 </div>
 
                 <div class="nav-list">
-                    <div class="hamburger">
+                    <div class="hamburger" aria-label="Open menu" aria-expanded="false" role="button" tabindex="0">
                         <div class="bar"></div>
                     </div>
 
                     <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About me</a></li>
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="courses.html">Courses</a></li>
@@ -59,26 +60,21 @@
                 <div class="hero-about">
                     <div class="hero-col">
                         <p>
-                            I’m Xenia, a full-time artist living and working in Romania. Art has been part of my life
-                            for as long as I can remember. I have always painted, drawn, and created.
+                            I’m Xenia, a full-time artist living and working in Romania. Art has been part of my life for as long as I can remember. I have always painted, drawn, and created.
                         </p>
 
                         <p>
-                            I work in series, using mixed media on various surfaces, and I enjoy experimenting. Art, the
-                            natural world, and human psychology remain my greatest passions.
+                            I work in series, using mixed media on various surfaces, and I enjoy experimenting. Art, the natural world, and human psychology remain my greatest passions.
                         </p>
                     </div>
 
                     <div class="hero-col">
                         <p>
-                            My passion for art and for people drives me to organize workshops and creative sessions for
-                            all ages: wine & paint sessions for adults, art activities in schools, and workshops for
-                            children and parents.
+                            My passion for art and for people drives me to organize workshops and creative sessions for all ages: wine & paint sessions for adults, art activities in schools, and workshops for children and parents.
                         </p>
 
                         <p>
-                            When you engage with my work, you do not just view art; you connect with my emotions and
-                            passions. Thank you for being part of my creative journey.
+                            When you engage with my work, you do not just view art; you connect with my emotions and passions. Thank you for being part of my creative journey.
                         </p>
 
                         <p class="hero-sign">Warmly,<br />Xenia</p>
@@ -90,11 +86,10 @@
     </section>
     <!-- ================= END HERO ================= -->
 
-
     <!-- ================= NEWSLETTER POPUP ================= -->
     <div id="newsletter-popup">
         <div class="popup-content">
-            <span class="close-btn">&times;</span>
+            <span class="close-btn" aria-label="Close popup">&times;</span>
             <h2>Subscribe to the newsletter</h2>
             <p>Stay up to date with the latest news and events from InspirArt!</p>
 
@@ -121,7 +116,6 @@
     </div>
     <!-- ================= END NEWSLETTER POPUP ================= -->
 
-
     <!-- Footer -->
     <section id="footer">
         <div class="footer container">
@@ -137,13 +131,11 @@
                 </p>
 
                 <p class="footer-text">
-                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
-                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many different ways. I hope you’ll enjoy your time here, and thank you for collecting.
                 </p>
 
                 <p class="footer-text">
-                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
-                    love to hear from you!
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d love to hear from you!
                 </p>
             </div>
 
@@ -160,8 +152,7 @@
                 <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
-                    rel="noopener">
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
             </div>
