--- a/courses.html
+++ b/courses.html
@@ -24,6 +24,7 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
+                        <li><a href="index.html" class="is-active">Home</a></li>
                         <li><a href="about.html">About me</a></li>
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="courses.html">Courses</a></li>
@@ -47,12 +48,10 @@
                     <div class="projects-info">
                         <h1>Project 1</h1>
                         <h2>Coding is love.</h2>
-                        <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau
-                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar.</p>
+                        <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./imagini/vg1703_photorealistic_field_of_colorful_tulips_golden_hour_oil__27344a96-65aa-4b5b-a23d-d03b2aed541a.png"
-                            alt="img">
+                        <img src="./imagini/vg1703_photorealistic_field_of_colorful_tulips_golden_hour_oil__27344a96-65aa-4b5b-a23d-d03b2aed541a.png" alt="img">
                     </div>
                 </div>
                 <!-- ... Project 2 și 3 ... -->
@@ -76,13 +75,11 @@
                 </p>
 
                 <p class="footer-text">
-                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
-                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many different ways. I hope you’ll enjoy your time here, and thank you for collecting.
                 </p>
 
                 <p class="footer-text">
-                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
-                    love to hear from you!
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d love to hear from you!
                 </p>
             </div>
 
@@ -99,8 +96,7 @@
                 <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
-                    rel="noopener">
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
             </div>
