--- a/workshops.html
+++ b/workshops.html
@@ -21,6 +21,7 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
+                        <li><a href="index.html" class="is-active">Home</a></li>
                         <li><a href="about.html">About me</a></li>
                         <li><a href="collection.html">Collection</a></li>
                         <li><a href="courses.html">Courses</a></li>
