--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InspirA+</title>
+    <!-- SEO basic -->
+    <title>InspirA+ | Artist Xenia Botea | Original Art & Workshops</title>
 
-    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
+    <meta name="description"
+        content="Original artworks, fine art prints and workshops by artist Xenia Botea. Discover InspirA+ Studio." />
+
+    <meta name="keywords"
+        content="Xenia Botea, InspirA+, artist Romania, fine art, painting, art workshops, original artwork" />
+
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook/WhatsApp) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="InspirA+ | Xenia Botea" />
+    <meta property="og:description"
+        content="Original artworks, fine art prints, workshops & courses by Xenia Botea (InspirA+ Studio)." />
+    <meta property="og:url" content="https://corina-ionelia.github.io/InspirArt-1/" />
+    <meta property="og:image" content="https://corina-ionelia.github.io/InspirArt-1/imagini/og-cover.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter (merge și pentru alte preview-uri) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="InspirA+ | Xenia Botea" />
+    <meta name="twitter:description"
+        content="Original artworks, fine art prints, workshops & courses by Xenia Botea (InspirA+ Studio)." />
+    <meta name="twitter:image" content="https://corina-ionelia.github.io/InspirArt-1/imagini/og-cover.jpg" />
+
+    <!-- Icons -->
+    <link rel="icon" href="imagini/cropped-fav.png" />
+    <link rel="apple-touch-icon" href="imagini/apple-touch-icon.png" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -60,21 +86,26 @@
                 <div class="hero-about">
                     <div class="hero-col">
                         <p>
-                            I’m Xenia, a full-time artist living and working in Romania. Art has been part of my life for as long as I can remember. I have always painted, drawn, and created.
+                            I’m Xenia, a full-time artist living and working in Romania. Art has been part of my life
+                            for as long as I can remember. I have always painted, drawn, and created.
                         </p>
 
                         <p>
-                            I work in series, using mixed media on various surfaces, and I enjoy experimenting. Art, the natural world, and human psychology remain my greatest passions.
+                            I work in series, using mixed media on various surfaces, and I enjoy experimenting. Art, the
+                            natural world, and human psychology remain my greatest passions.
                         </p>
                     </div>
 
                     <div class="hero-col">
                         <p>
-                            My passion for art and for people drives me to organize workshops and creative sessions for all ages: wine & paint sessions for adults, art activities in schools, and workshops for children and parents.
+                            My passion for art and for people drives me to organize workshops and creative sessions for
+                            all ages: wine & paint sessions for adults, art activities in schools, and workshops for
+                            children and parents.
                         </p>
 
                         <p>
-                            When you engage with my work, you do not just view art; you connect with my emotions and passions. Thank you for being part of my creative journey.
+                            When you engage with my work, you do not just view art; you connect with my emotions and
+                            passions. Thank you for being part of my creative journey.
                         </p>
 
                         <p class="hero-sign">Warmly,<br />Xenia</p>
@@ -131,11 +162,13 @@
                 </p>
 
                 <p class="footer-text">
-                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
+                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
                 </p>
 
                 <p class="footer-text">
-                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d love to hear from you!
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
+                    love to hear from you!
                 </p>
             </div>
 
@@ -152,7 +185,8 @@
                 <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank" rel="noopener">
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
+                    rel="noopener">
                     <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
             </div>
