--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Original artworks, fine art prints, workshops & courses by Xenia Botea (InspirA+ Studio)." />
     <meta property="og:url" content="https://corina-ionelia.github.io/InspirArt-1/" />
-    <meta property="og:image" content="https://corina-ionelia.github.io/InspirArt-1/imagini/og-cover.jpg" />
+    <meta property="og:image" content=https://corina-ionelia.github.io/InspirArt-1/?update=1 />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
